added google analytics

--- a/area.html
+++ b/area.html
@@ -7,5 +7,15 @@
 	<tr><td><a href="area/A3.html">A3</a></td><td><a href="area/B3.html">B3</a></td><td><a href="area/C3.html">C3</a></td><td><a href="area/D3.html">D3</a></td><td><a href="area/E3.html">E3</a></td></tr>
 	<tr><td><a href="area/A4.html">A4</a></td><td><a href="area/B4.html">B4</a></td><td><a href="area/C4.html">C4</a></td><td><a href="area/D4.html">D4</a></td><td><a href="area/E4.html">E4</a></td></tr>
 	</table>
-	</body>
+        <script type="text/javascript">
+            var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+            document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+            </script>
+            <script type="text/javascript">
+            try{
+                var pageTracker = _gat._getTracker("UA-9263410-1");
+                pageTracker._trackPageview();
+            } catch(err) {}
+            </script>
+        </body>
 </html>
